--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -254,9 +254,9 @@ en:
     customer: "Customer"
 
   task:
-    problem: "Problem"
     confirm: "Confirm"
     do: "Do"
+    pay: "Pay"
     finish: "Finish"
     condition: "Condition"
     owner: "Owner"
@@ -277,10 +277,12 @@ en:
     error: "Can not publish a task"
     published: "Published"
     unpublished: "Un-Published"
+    payed: "Payed"
     finished: "Finished"
     send_problem: "Argue"
     problem: "Problem"
     running: "Running"
+    end: "End"
     total_task: "Total tasks"
     total_todo: "Total todo works"
     not_enough_point: "Not enough point or money"
@@ -383,6 +385,8 @@ en:
     total_message: "There are %{total} unread messages"
     task_takeover: "Task %{task} has been take over"
     task_takeover_content: "Task %{task} has been take over,<br>link: http://www.boat166.com/message/%{link}"
+    task_pay: "Task %{task} has been payed"
+    task_pay_content: "Task %{task} has been payed,<br>link: http://www.boat166.com/message/%{link}"
     task_finish: "Task %{task} has been finish"
     task_finish_content: "Task %{task} has been finish,<br>link: http://www.boat166.com/message/%{link}"
     task_confirm: "Task t%{task} has confirmed"
