--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -263,9 +263,9 @@ zh:
     customer: "买号"
 
   task:
-    problem: "投诉"
     confirm: "确认"
     do: "接手任务"
+    pay: "付款"
     finish: "完成任务"
     condition: "任务条件"
     owner: "发布者"
@@ -286,10 +286,12 @@ zh:
     error: "无法发布任务"
     published: "己发布"
     unpublished: "未发布"
+    payed: "己付款"
     finished: "己完成"
     send_problem: "投诉"
     problem: "问题处理中"
     running: "执行中"
+    end: "己结束"
     total_task: "发布任务总数"
     total_todo: "接手任务总数"
     not_enough_point: "没有足够发布点或余额, 或者操作码不正确"
@@ -392,6 +394,8 @@ zh:
     total_message: "有%{total}条新的消息,请注意查看"
     task_takeover: "任务 %{task} 己被接手,请关注"
     task_takeover_content: "任务 %{task} 己被接手,<a href='/tasks/%{link}'>任务链接</a>"
+    task_pay: "任务 %{task} 己付款,请关注"
+    task_pay_content: "任务 %{task} 己付款,<a href='/tasks/%{link}'>任务链接</a>"
     task_finish: "任务 %{task} 己完成"
     task_finish_content: "任务 %{task} 己完成,<a href='/tasks/%{link}'>任务链接</a>"
     task_confirm: "任务 %{task} 己确认"
