--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -2,20 +2,12 @@ activemodel:
   attributes:
     user:
       login: "用戶名或邮箱"
-zh:
-  activerecord:
-    models:
-      user: "用户"
-    attributes:
-      user:
-        loginname: "用户名"
-        email: "邮件"
-    errors:
-      messages: 
-        record_invalid: "无效的记录"
-        not_saved: "信息未保存"
 
 zh:
+  errors:
+    messages:
+      not_saved: "操作失败"
+      record_invalid: "无效的记录"
   global:
     title: "标题"
     content: "内容"
@@ -309,6 +301,7 @@ zh:
     can_not_modify: "任务己被接手,不能被编辑"
     virtual_task: "虚拟任务"
     virtual: "虚拟"
+    spend: "若设置, 扣%{point}发布点"
 
   transport:
     unused: "未使用"
@@ -358,7 +351,14 @@ zh:
     report_punish: "举报处罚"
     extra_word: "附加词语消耗点数"
     custom_judge: "自定义评价消耗点数"
-    real_level: "接任务方帐号级别"
+    real_level: "接任务方帐号真实级别"
+    init_required_point: "初始扣除发布点数"
+    init_gift_point: "初始赠送发布点数"
+    running_task: "总运行任务数"
+    total_task: "总任务数"
+    total_user: "总用户数"
+    transport_price: "运单价格"
+    times_limit: "运单出售次数限制"
 
   issue:
     request: "申请"
@@ -516,14 +516,17 @@ zh:
         title: "标题"
         content: "内容"
         article_type: "类型"
+      notice:
+        title: "标题"
+        content: "内容"
     hints:
       task:
         title: "为任务写一个标题,必须大于5个字"
-        task_type: "taobao, paipai, 等等.还可发布虚拟任务,以及提现任务"
+        task_type: "taobao, paipai, youa任务.还可发布提现任务"
         price: "担保金=商品价格+邮费"
         status: "必须选择发布之后,任务才会发布到任务中心,任务发布之后,不能修改,请认真核实"
         link: "真实交易链接,链接的商品必须是店铺里的商品"
-        tran_type: "发货的快递公司,如果不选系统自动随机生成"
+        tran_type: "发货的快递公司,如果不选系统自动随机生成,可以填写从运单市场上购买的运单号"
         tran_id: "发货的运单号,如果不填系统自动生成"
         description: "为任务写一些描述性的文字,可以不写"
         worker_level: "接任务人在平台中的级别,不选则任何级别的平台用户都可见"
@@ -535,6 +538,7 @@ zh:
         custom_judge_content: "要求接任务的买家在评价中填写的内容,必须选中自定义评价此项才有效,可以不填让买家自己写评价"
         transport_id: "如果不填系统自动生成一个单号"
         shop: "店铺名称,必须和绑定的店铺对应"
+        virtual: "选中则发布为虚拟任务"
       user:
         role_objects: "分配用户的权限"
         im: "任何聊天工具的帐号都可填在这里"
