add new notification style

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -304,6 +304,7 @@ en:
     error_month: "Every month can take only 35 tasks"
     error_sameshop: "Buyer can not take more than 6 tasks at the same shop in one month"
     can_not_modify: "Task has been taken over, you can not modify"
+    normal_task: "Normal Task"
     virtual_task: "Virtual Task"
     virtual: "Virtual"
     spend: "Spend %{point} point"
