--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -294,7 +294,7 @@ zh:
     end: "己结束"
     total_task: "发布任务总数"
     total_todo: "接手任务总数"
-    not_enough_point: "没有足够发布点或余额, 或者操作码不正确"
+    not_enough_point: "没有足够发布点或余额"
     not_bind_shop: "没有绑定店铺,无法创建任务"
     point: "发布点"
     can_not_delete: "无法删除该任务"
@@ -306,6 +306,7 @@ zh:
     error_month: "每个买号每周最多接手35个任务"
     error_sameshop: "同一买号不能在一个自然月内接同一发布人同一网店任务超过六个"
     can_not_modify: "任务己被接手,不能被编辑"
+    normal_task: "普通任务"
     virtual_task: "虚拟任务"
     virtual: "虚拟"
     spend: "若设置, 扣%{point}发布点"
