--- a/config/locales/devise.zh.yml
+++ b/config/locales/devise.zh.yml
@@ -7,33 +7,33 @@ zh:
 
   devise:
     failure:
-      unauthenticated: '您必须登录或注册后才能继续操作'
-      unconfirmed: '您必须确认您的帐户之后才能继续操作'
-      locked: '您的帐户己被锁定'
-      invalid: '无效的用户名或密码'
+      unauthenticated: '请先登录或注册新的帐号'
+      unconfirmed: '请先激活您的帐号'
+      locked: '账号己被锁定'
+      invalid: '错误的用户名和密码'
       invalid_token: 'Invalid authentication token.'
-      timeout: '会话己过期,请重新登录'
-      inactive: 'Your account was not activated yet.'
+      timeout: '会话己过期, 请重新登录'
+      inactive: '账户未激活'
     sessions:
       signed_in: '登录成功.'
       signed_out: '注销成功.'
     passwords:
-      send_instructions: 'You will receive an email with instructions about how to reset your password in a few minutes.'
-      updated: 'Your password was changed successfully. You are now signed in.'
+      send_instructions: '请查收密码修改邮件, 并按照邮件中的提示操作'
+      updated: '密码修改成功, 可以登录平台'
     confirmations:
-      send_instructions: 'You will receive an email with instructions about how to confirm your account in a few minutes.'
-      confirmed: 'Your account was successfully confirmed. You are now signed in.'
+      send_instructions: '请查收激活邮件, 并按照邮件中的提示操作'
+      confirmed: '账号己激活, 可以登录平台'
     registrations:
-      signed_up: 'You have signed up successfully. If enabled, a confirmation was sent to your e-mail.'
-      updated: 'You updated your account successfully.'
-      destroyed: 'Bye! Your account was successfully cancelled. We hope to see you again soon.'
+      signed_up: '注册成功. 请查收邮箱激活您的账号'
+      updated: '账户更新成功.'
+      destroyed: '账户删除成功, 我们希望您能两次使用我们的服务'
     unlocks:
-      send_instructions: 'You will receive an email with instructions about how to unlock your account in a few minutes.'
-      unlocked: 'Your account was successfully unlocked. You are now signed in.'
+      send_instructions: '请查收解锁邮件, 并按照邮件中的提示操作'
+      unlocked: '账号己成功解锁, 可以登录'
     mailer:
       confirmation_instructions:
-        subject: 'Confirmation instructions'
+        subject: '平台账号激活'
       reset_password_instructions:
-        subject: 'Reset password instructions'
+        subject: '平台密码重置'
       unlock_instructions:
-        subject: 'Unlock Instructions'
+        subject: '平台账号解锁'
