--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -266,6 +266,8 @@ zh:
     operate_password_desc: "如果没有设置可不填,密码不正确无法发布任务"
     not_enough_recyling_point: "发布点未到额度"
     not_enough_score: "积分未到额度"
+    create_account: " 创建帐户"
+    delete_account: " 删除帐户"
 
   participant:
     user: "用户"
@@ -281,6 +283,7 @@ zh:
     confirm: "确认"
     do: "接手任务"
     pay: "付款"
+    transport: "发货"
     finish: "完成任务"
     condition: "任务条件"
     owner: "发布者"
@@ -302,6 +305,7 @@ zh:
     published: "己发布"
     unpublished: "未发布"
     payed: "己付款"
+    transported: "己发货"
     finished: "己完成"
     send_problem: "投诉"
     problem: "问题处理中"
@@ -455,6 +459,8 @@ zh:
     task_takeover_content: "任务 %{task} 己被接手,<a href='/tasks/%{link}'>任务链接</a>"
     task_pay: "任务 %{task} 己付款,请关注"
     task_pay_content: "任务 %{task} 己付款,<a href='/tasks/%{link}'>任务链接</a>"
+    task_transport: "任务 %{task} 己发货,请关注"
+    task_transport_content: "任务 %{task} 己发货,<a href='/tasks/%{link}'>任务链接</a>"
     task_finish: "任务 %{task} 己完成"
     task_finish_content: "任务 %{task} 己完成,<a href='/tasks/%{link}'>任务链接</a>"
     task_confirm: "任务 %{task} 己确认"
@@ -518,6 +524,8 @@ zh:
         tran_id: "物流单号"
         published_time: "发布时间"
         takeover_time: "接手时间"
+        pay_time: "付款时间"
+        transport_time: "发货时间"
         finished_time: "完成时间"
         confirmed_time: "确认时间"
         shop: "掌柜名"
