update first page displays tyle

--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -97,7 +97,7 @@ zh:
     task_type: "%{task_type}任务"
     new_task: "发布任务"
     user_center: "用户中心"
-    rule: "规则说明"
+    rule: "平台百科"
     my_task: "我发布的任务"
     my_todo: "我接手的任务"
     my_cash: "我的提现任务"
