--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -107,6 +107,8 @@ zh:
     my_messages: "我的消息"
     my_participants: "用户帐号"
     issue: "问题中心"
+    tasklog_center: "任务日志"
+    accountlog_center: "帐户日志"
     setting: "平台设置"
     manage_center: "管理中心"
     notice: "公告"
