update display style

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -66,6 +66,10 @@ en:
     admin: "Admin"
     roles: "Roles"
     access_denied: "Access Denied"
+    access_reason: "The reason may be:"
+    access_guest: "> You are guest, please charge to become user"
+    access_right: "> You have not enought rights, please contact the customer service"
+    login_tip: "After signup, please confirm from your account before login"
     label: "Site"
     welcome: "Welcome, ${name}"
     login: "Login"
