update display style

--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -131,7 +131,7 @@ zh:
     running_task: "当前任务数"
     user_number: "注册用户数"
     user_info: "用户信息"
-    transport_center: "运单市场"
+    transport_center: "平台市场"
     operate_password: "操作码管理"
     old_password: "旧操作码"
     register_success: "注册成功"
