update participant active style

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -69,11 +69,21 @@ en:
     access_reason: "The reason may be:"
     access_guest: "> You are guest, please charge to become user"
     access_right: "> You have not enought rights, please contact the customer service"
-    login_tip: "After signup, please confirm from your account before login"
+    login_tip: "Tips:"
+    login_tip1: "1. After signup, please confirm from your account before login"
+    login_tip2: "2. If can not login, please check your password"
+    login_tip3: "3. If forget your password, please click 'Forget Password' link to recover your password"
+    sign_tip: "Boat166 web servict"
+    sign_rule1: ""
+    sign_rule2: ""
+    sign_rule3: ""
+    sign_rule4: ""
+    sign_rule5: ""
     label: "Site"
     welcome: "Welcome, ${name}"
     login: "Login"
     register: "Register"
+    register_agree: "Register and Agree Service Contract"
     logout: "Logout"
     profile: "Profile"
     login_name: "Login"
@@ -288,10 +298,13 @@ en:
     youa: "Youa"
     shop: "Shop"
     customer: "Customer"
+    no_shop_url: "Shop Address Not Existed"
+    shop_existed: "Shop Address Has Been Used"
     in_use: "Used"
     active: "Active"
     danger: "Danger"
     pause: "Pause"
+    make_active: "Make Active"
 
   task:
     confirm: "Confirm"
