--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -69,11 +69,21 @@ zh:
     access_reason: "不能访问的原因可能是:"
     access_guest: "> 您的权限为访客,请充值成分正式用户"
     access_right: "> 权限不足,请联系客服人员"
-    login_tip: "注册后,请查收邮件激活帐号后才能登录"
+    login_tip: "小提示:"
+    login_tip1: "1. 注册后,请查收邮件,激活你的帐号以后才能登录"
+    login_tip2: "2. 若输入用户名或密码无法登录,请检查用户名和密码是否输入正确"
+    login_tip3: "3. 若忘记密码,请点击'忘记密码'链接找回您的密码"
+    sign_tip: "同舟网络服务使用协议"
+    sign_rule1: "1. 本服务协议为同舟网络服务公司与服务使用人（“用户”）之间的协议。用户注册后，用户应当对以其用户帐号进行的所有活动和事件负法律责任。"
+    sign_rule2: "2. 同舟网络有权随时修改本协议的任何条款，并在同舟网站公示，而无需另行单独通知用户。"
+    sign_rule3: "3. 用户需遵守平台规则中提到的所有条款。请参考同舟平台的规则说明。"
+    sign_rule4: "4. 保护用户隐私是同舟网络的一项基本政策，同舟网络保证不对外公开或向第三方提供单个用户的注册资料及用户在使用网络服务时存储在同舟网络的非公开内容。"
+    sign_rule5: "5. 用户明确同意由自身原因使用同舟网络服务产生问题，所造成的损失将完全由其自己承担；因其使用同舟网络服务而产生的一切后果也由其自己承担，同舟网络对用户不承担任何责任。"
     label: "首页"
     welcome: "欢迎, %{name}"
     login: "登录"
     register: "注册"
+    register_agree: "注册并同意同舟服务协议"
     logout: "注销"
     profile: "帐户"
     login_name: "用户名"
@@ -102,7 +112,7 @@ zh:
     task_type: "%{task_type}任务"
     new_task: "发布任务"
     user_center: "用户中心"
-    rule: "平台百科"
+    rule: "平台规则"
     my_task: "我发布的任务"
     my_todo: "我接手的任务"
     my_cash: "我的提现任务"
@@ -292,10 +302,12 @@ zh:
     shop: "店铺"
     customer: "买号"
     no_shop_url: "绑定店铺必须填写店铺地址"
+    shop_existed: "该地址己被使用"
     in_use: "使用中"
     active: "正常"
     danger: "不安全"
     pause: "暂停"
+    make_active: "设为当前帐号"
 
   task:
     confirm: "确认"
@@ -385,8 +397,8 @@ zh:
     manage_recyling: "发布点回收管理"
     manage_score: "积分兑换管理"
     no_enough_money: "金额不足"
-    must_input: "如果充值交易通过银行转账,则必须填写交易单号"
-    bad_deal: "禁止胡乱填写交易单号,如经发现严肃处理"
+    must_input: "交易金额必须填写,交易单号可不填"
+    bad_deal: "请正确填写交易单号"
     buy_transport: "购买运单号码"
     spend: "消费"
     charge: "充值"
