--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -347,11 +347,13 @@ zh:
     total_finish_todo_payment: "己完成任务金额"
     total_finish_todo_point: "己完成任务发布点"
     not_enough_point: "没有足够发布点或余额"
-    not_bind_shop: "没有绑定店铺,无法创建任务"
+    not_bind_shop: "您还没有绑定店铺,无法创建任务. 请点击'创建',绑定一个店铺,然后再发布任务"
     point: "发布点"
     can_not_delete: "无法删除该任务"
+    error_head: "无法接手该任务"
     error_self: "不能接手自己的任务"
     error_buyer: "未绑定买号"
+    error_diff: "当前使用的买号类型与任务类型不一致"
     error_level: "没有权限或用户级别太低"
     error_avoidday: "发任务方限制天数内不能接任务"
     error_day: "每个买号每日最多接手6个任务"
@@ -363,6 +365,7 @@ zh:
     virtual: "虚拟"
     spend: "若设置, 扣%{point}发布点"
     demo: "完整任务流程演示"
+    check_store: "请检查帐户余额或发布点是否充足"
 
   transport:
     unused: "未使用"
@@ -419,6 +422,8 @@ zh:
     last_month_business: "上月业务"
     date_empty: "日期不能为空"
     business: "业务统计"
+    no_account_name: "如果填写了发布点,平台用户名必须同时填写"
+    not_account_name: "平台用户名不存在"
 
   setting:
     point_ratio: "发布兑换比"
@@ -625,7 +630,7 @@ zh:
     hints:
       task:
         title: "为任务写一个标题,必须大于5个字"
-        task_type: "taobao, paipai, youa任务.还可发布提现任务"
+        task_type: "taobao, paipai, youa任务.还可发布提现任务,与当前绑定的店铺帐号相关联"
         price: "担保金=商品价格+邮费"
         status: "必须选择发布之后,任务才会发布到任务中心,任务发布之后,不能修改,请认真核实"
         link: "真实交易链接,链接的商品必须是店铺里的商品"
